# lattes.cnpq

./: .env.docker  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  app.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.bat  scraper.py
.streamlit/: config.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/docs/: SCRAPING_FLOW.md
backend/docs/docx/: Antonio José Gonçalves da Cruz devolutiva 1.docx
backend/scripts/: README.md  batch_scrape.py  test_batch.py
backend/src/api/: main.py  routes.py  schemas.py
backend/src/api/routers/: __init__.py  _helpers.py  ai.py  batch.py  events.py  health.py  scrape.py  search.py
backend/src/core/: curriculo_diff.py  document_maker.py  exporter.py  scraper.py  storage.py  summarizer.py
backend/src/libs/: __init__.py  csv_utils.py  filename.py  logging.py  request_monitor.py
backend/src/models/: __init__.py  ai.py  scrape.py  search.py
backend/tests/: conftest.py  test_api_health.py  test_batch_logging.py  test_curriculo_diff.py  test_curriculo_diff_historico.py  test_exporter.py  test_request_monitor.py  test_scrape_router.py  test_scraper.py  test_scraper_name_variants.py  test_scraper_summary_source.py  test_storage.py  test_storage_cache.py  test_summarizer.py
docs/: ENV_DOCKER.md  SCRAPING_FLOW.md  TODO.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
getting-started/: .env.example  Makefile  QUICKSTART.md  README.md  dev.sh
src/: __init__.py  (+1 more)
(+69 files in other folders)
