[project]
name = "lattes-scraper"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "playwright>=1.55.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "scalar-fastapi>=1.8.1",
    "supabase>=2.15.3",
]
requires-python = ">=3.11"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
