[project]
name = "lattes-scraper"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "playwright>=1.55.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "scalar-fastapi>=1.8.1",
    "supabase>=2.15.3",
    "openai>=2.30.0",
    "google-generativeai>=0.8.6",
    "pypdf>=5.4.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
